k8s/petclinic.asb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-backend
  labels:
    app: petclinic-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-backend
  template:
    metadata:
      labels:
        app: petclinic-backend
    spec:
      containers:
        - name: petclinic-backend
          image: "datastaxdevs/petclinic-backend"
          volumeMounts:
            - name: tmp
              mountPath: "/tmp"
      volumes:
        - name: tmp
          emptyDir: {}
        - name: astra-bundle
          secret:
            secretName: petclinicdb
---
kind: Service
apiVersion: v1
metadata:
  name: petclinic-backend
spec:
  #type: NodePort
  selector:
    app: petclinic-backend
  ports:
    # Default port used by the image
    - port: 9966
      #targetPort: 9966
      #nodePort: 30000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-frontend
  labels:
    app: petclinic-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-frontend
  template:
    metadata:
      labels:
        app: petclinic-frontend
    spec:
      containers:
        - name: petclinic-frontend
          image: "datastaxdevs/petclinic-frontend"
          #command: ["tail"]
          #args: ["-f", "/dev/null"]
---
kind: Service
apiVersion: v1
metadata:
  name: petclinic-frontend
spec:
  selector:
    app: petclinic-frontend
  ports:
    - port: 8081
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: petclinic-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: petclinic-frontend
              servicePort: 8081
          - path: /petclinic/api
            backend:
              serviceName: petclinic-backend
              servicePort: 9966
